feat: update, delete and get
